# chainsaw

./: Cargo.toml
mappings/: sigma-event-logs.yml
src/: cli.rs  hunt.rs  lib.rs  main.rs  search.rs  write.rs
src/file/: evtx.rs  mod.rs
src/rule/: chainsaw.rs  mod.rs  stalker.rs
