[package]
name = "chainsaw"
version = "2.0.0-alpha.0"
repository = "https://github.com/countercept/chainsaw"
description = "Rapidly Search and Hunt Through Windows Event Logs"
authors = ["James Dorgan <james.dorgan@f-secure.com>","Alex Kornitzer <alex.kornitzer@f-secure.com>"]
readme = "README.md"
license = "GPL3"
edition = "2021"


[dependencies]
anyhow = "1.0"
chrono = "0.4"
colour = "0.6"
csv = "1.1"
evtx = "0.7"
glob = "0.3"
indicatif = "0.16"
log = "0.4"
prettytable-rs = "0.8"
rayon = "1.5"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
tau-engine = { version = "1.0", features = ["json"] }
walkdir = "2.3"


[dev-dependencies]
paste = "1.0"
